--- a/settingsControl.ini
+++ b/settingsControl.ini
@@ -1,11 +1,11 @@
 comPort=COM1
-smsIp=127.0.0.1
-smsPort=2015
+smsIp=192.168.51.132
+smsPort=3500
 smsPas=12345
-gprsIp=172.0.0.1
-gprsPort=2015
-gprsPas=
-bdIp=172.0.0.1
-bdName=
-bdUser=
-bdPas=
+gprsIp=192.168.51.71
+gprsPort=3502
+gprsPas=123321
+bdIp=192.168.51.133
+bdName=RemoteControlDB
+bdUser=autotest
+bdPas=b1Lf4WuCX6j
